AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stan do remontu</fullName>
            </value>
            <value>
                <fullName>Bogate wyposażenie</fullName>
            </value>
            <value>
                <fullName>Ubogie wyposażenie</fullName>
            </value>
            <value>
                <fullName>Stan developerski</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>