AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/fields/Floors__c.field-meta.xml
<CustomField>
    <fullName>Floors__c</fullName>
    <label>Floors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>