AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/fields/Is_it_open_space__c.field-meta.xml
<CustomField>
    <fullName>Is_it_open_space__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is it open space?</label>
    <type>Checkbox</type>
</CustomField>