AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/fields/m__c.field-meta.xml
<CustomField>
    <fullName>m__c</fullName>
    <label>m²</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>