AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <label>Property City</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>