AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/fields/Property_Number__c.field-meta.xml
<CustomField>
    <fullName>Property_Number__c</fullName>
    <label>Property Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>