AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/fields/Property_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Post_Code__c</fullName>
    <label>Property Post Code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>