AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <label>Property State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dolnośląskie</fullName>
            </value>
            <value>
                <fullName>Kujawsko-Pomorskie</fullName>
            </value>
            <value>
                <fullName>Lubelskie</fullName>
            </value>
            <value>
                <fullName>Lubuskie</fullName>
            </value>
            <value>
                <fullName>Łódzkie</fullName>
            </value>
            <value>
                <fullName>Małopolskie</fullName>
            </value>
            <value>
                <fullName>Mazowieckie</fullName>
            </value>
            <value>
                <fullName>Opolskie</fullName>
            </value>
            <value>
                <fullName>Podkarpackie</fullName>
            </value>
            <value>
                <fullName>Podlaskie</fullName>
            </value>
            <value>
                <fullName>Pomorskie</fullName>
            </value>
            <value>
                <fullName>Sląskie</fullName>
            </value>
            <value>
                <fullName>Świętokrzyskie</fullName>
            </value>
            <value>
                <fullName>Warmińsko-Mazurskie</fullName>
            </value>
            <value>
                <fullName>Wielkopolskie</fullName>
            </value>
            <value>
                <fullName>Zachodniopomorskie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>