AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/fields/Property_Street__c.field-meta.xml
<CustomField>
    <fullName>Property_Street__c</fullName>
    <label>Property Street</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>