AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName>
    <label>Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>