AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/fields/z_m__c.field-meta.xml
<CustomField>
    <fullName>z_m__c</fullName>
    <description>Minimal selling price</description>
    <formula>Minimal_Selling_Price__c /  m__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Obliczone na podstawie Minimalnej ceny sprzedaży</inlineHelpText>
    <label>zł/m²</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>