AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/recordTypes/House.recordType-meta.xml
<RecordType>
    <fullName>House</fullName>
    <active>true</active>
    <description>Jeśli chcesz wprowadzić nowy dom lub mieszkanie do systemu, wybierz &quot;House&quot;</description>
    <label>House</label>
</RecordType>