AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/recordTypes/Office.recordType-meta.xml
<RecordType>
    <fullName>Office</fullName>
    <active>true</active>
    <description>Jeśli chcesz wprowadzić nowe biuro do systemu, wybierz &quot;Office&quot;</description>
    <label>Office</label>
</RecordType>