AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/validationRules/Is_it_open_space_and_Rooms_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_it_open_space_and_Rooms_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Is_it_open_space__c),
  Is_it_open_space__c,
  NOT(ISBLANK(Rooms__c))
)</errorConditionFormula>
    <errorDisplayField>Rooms__c</errorDisplayField>
    <errorMessage>Jeśli biuro jest typu &quot;Open space&quot; wtedy nie uzupełniamy pola Rooms.</errorMessage>
</ValidationRule>