AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/validationRules/Property_post_code.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_post_code</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(REGEX( Property_Post_Code__c , &quot;^[0-9]{2}-[0-9]{3}$&quot;)), NOT(ISBLANK(Property_Post_Code__c)) )</errorConditionFormula>
    <errorDisplayField>Property_Post_Code__c</errorDisplayField>
    <errorMessage>Odpowiedni format to dd-ddd, gdzie d to liczba</errorMessage>
</ValidationRule>