AgencjaNieruchomosciXYZ_Project/force-app/main/default/objects/Property__c/listViews/Office_Properties.listView-meta.xml
<ListView>
    <fullName>Office_Properties</fullName>
    <columns>NAME</columns>
    <columns>m__c</columns>
    <columns>z_m__c</columns>
    <columns>Minimal_Selling_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Property__c.Office</value>
    </filters>
    <label>Office Properties</label>
</ListView>